<resources>
    <string name="app_name">To-Do List</string>
    <string name="ToDoName">To Do Name</string>

    <string name="CreateAccount">You Have Successfully Registered! Now, You Can Sign In.</string>

    <string name="Profile">Profile</string>
    <string name="ChangePassword">Change Password</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="DeleteSure">Are You Sure?</string>
    <string name="DeleteSureDesc">If You Click Done Button, Your Account Delete</string>
    <string name="DeleteCompleted">Your Account Delete Successfully</string>


    <string name="MissionsList">Missions List</string>
    <string name="ToDoItemDeadLine">To Do Item DeadLine</string>
    <string name="ToDoItemName">To Do Item Name</string>
    <string name="ToDoItemDescription">To Do Item Description</string>
    <string name="ToDoItemNumber">Mission Number</string>

    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="Choose">Choose</string>
    <string name="Export">Export</string>
    <string name="Share">Share</string>
    <string name="AddNewMission">Add New Mission</string>

    <string name="AddToDo">Add To-Do</string>
    <string name="ListToDo">List To-Do</string>
    <string name="LogOut">Log Out</string>

    <string name="CurrentPassword">Current Password*</string>
    <string name="NewPassword">New Password*</string>
    <string name="NewPasswordAgain">Confirm New Password*</string>

    <string name="WrongPassword">Your Current Password Is Incorrect</string>
    <string name="DontMatchPassword">The Passwords You Entered Dont Match Each Other</string>
    <string name="MustBlank"> * The Marked Fields Must Be Filled In</string>


    <string name="SignUpButton">Sign Up</string>
    <string name="SignInButton">Sign In</string>
    <string name="SignUp">Dont Have An Account? Sign Up Here!</string>
    <string name="SignIn">Have An Account? Sign In Here!</string>

    <string name="UserName">UserName</string>
    <string name="Password">Password</string>

    <string name="SameInformation">Email Already Taken</string>
    <string name="WrongInformation">Check Your Information</string>
    <string name="DontHavaAccount">This E-Mail Dont Registered</string>
    <string name="SuccesRegistered">You registered successful</string>

    <string name="MissionComplated">Mission is Succesfull</string>
    <string name="MissionFailed">Mission is Failed</string>

    <string name="All">All</string>
    <string name="Complated">Completed</string>
    <string name="UnComplated">UnCompleted</string>

    <string name="ProgressLogin">Login...</string>
    <string name="ProgressRegister">Register...</string>


    <string name="CheckNetwork">Dont Connect Newtwork</string>
    <string name="CheckBlank">Please fill blank</string>


</resources>
