<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="331dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/CurrentPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:met_textColor="@color/colorAccent"
            app:met_textColorHint="@color/colorAccent"
            android:scrollbarThumbHorizontal="@android:color/background_light"
            android:scrollbarThumbVertical="@android:color/background_light"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@android:color/transparent"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/NewPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextOldPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextOldPassword"
            app:met_textColor="@color/colorAccent"
            app:met_textColorHint="@color/colorAccent"
            android:scrollbarThumbHorizontal="@android:color/background_light"
            android:scrollbarThumbVertical="@android:color/background_light"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@android:color/transparent"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextNewPasswordAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/NewPasswordAgain"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextNewPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword"
            app:met_textColor="@color/colorAccent"
            app:met_textColorHint="@color/colorAccent"
            android:scrollbarThumbHorizontal="@android:color/background_light"
            android:scrollbarThumbVertical="@android:color/background_light"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@android:color/transparent"
            app:met_floatingLabel="highlight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewDone"
        android:layout_width="242dp"
        android:layout_height="88dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDone"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDone"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/imageViewDone"
        app:layout_constraintTop_toTopOf="@+id/imageViewDone" />
</androidx.constraintlayout.widget.ConstraintLayout>