<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutButtom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextToDoListName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="16"
            android:hint="@string/ToDoName"
            android:inputType="textEmailAddress"
            android:scrollbarThumbHorizontal="@android:color/background_light"
            android:scrollbarThumbVertical="@android:color/background_light"
            android:textColor="@android:color/background_light"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955"
            app:met_floatingLabel="highlight"
            app:met_textColor="@color/colorAccent"
            app:met_textColorHint="@color/colorAccent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutButtom"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageViewToDoListAdd"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button" />

        <ImageView
            android:id="@+id/imageViewCancel"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewToDoListAdd"
            app:layout_constraintStart_toStartOf="@+id/imageViewToDoListAdd"
            app:layout_constraintTop_toBottomOf="@+id/imageViewToDoListAdd"
            app:srcCompat="@drawable/button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewToDoListAdd"
            app:layout_constraintEnd_toEndOf="@+id/imageViewToDoListAdd"
            app:layout_constraintStart_toStartOf="@+id/imageViewToDoListAdd"
            app:layout_constraintTop_toTopOf="@+id/imageViewToDoListAdd" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewCancel"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCancel"
            app:layout_constraintStart_toStartOf="@+id/imageViewCancel"
            app:layout_constraintTop_toTopOf="@+id/imageViewCancel"
            app:layout_constraintVertical_bias="0.631" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>